[LT-72] Fix return types of end points